# crawlbox

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_ddg.py  test_search.py  test_searx.py  test_yahoo.py
scratch/: test_twitter_ddg.py
scripts/: download-models.py
src/: config.py  database.py  main.py  models.py
src/crawler/: engine.py  ethics.py  extractor.py  js_renderer.py  news.py  search.py  social.py
src/nlp/: pipeline.py  prompts.py
src/tasks/: orchestrator.py  progress.py
src/templates/: base.html  history.html  index.html  job.html  results.html
static/css/: app.css
tests/: conftest.py  test_api.py
