[project]
name = "sentiment-tools"
version = "2.0.0"
description = "Open-source local sentiment analysis tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.31",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "onnxruntime>=1.18.0",
    "transformers>=4.42.0",
    "langdetect>=1.0.9",
    "openai>=1.35.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=0.18.0","torch>=2.3.0"]
playwright = ["playwright>=1.45.0"]
dev = ["pytest>=8.2.0","pytest-asyncio>=0.23.0","httpx","ruff>=0.5.0"]